--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18",
     "viem": "^2.45.1",
     "wagmi": "^3.4.2"
